objects/DemoObj1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>TextField1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phonefield1__c</fullName>
        <label>Phonefield1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklistsfeld1__c</fullName>
        <label>Picklistsfeld1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DemoObj1</label>
    <nameField>
        <label>DemoObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>